# OpsPilot

./: DECISIONS.md  README.md
backend/: main.py  pyproject.toml  seed.py
backend/app/: database.py  models.py
backend/app/routers/: analytics.py  tickets.py
backend/app/services/: ai_service.py  mcp_services.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/observability/: page.tsx
frontend/app/summary/: page.tsx
frontend/app/tickets/: page.tsx
